--- a/src/app/signal-forms/signal-forms-page.scss
+++ b/src/app/signal-forms/signal-forms-page.scss
@@ -1,6 +1,8 @@
 :host {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
 
   app-page-header {
     flex: 0;
@@ -8,7 +10,7 @@
 
   form {
     flex: 1;
-    overflow: hidden;
+    overflow: auto;
 
     [ngAccordionGroup] {
       flex: 1;
